# radar-hail-probability

./: .containerignore  .gitignore  AGENTS.md  CLAUDE.md  Containerfile  README.md  pyproject.toml
docs/presentation/: Makefile  README.md  agenttiohjelmointi_esitys.tex
src/hailathon/: pipeline.py
src/hailathon/algorithms/: lhi.py  poh.py
src/hailathon/io/: geotiff.py  iris.py  nwp.py  odim.py  tops.py
src/hailathon/output/: geotiff.py  odim.py
src/hailathon/projection/: grid.py
src/scripts/: entrypoint.py  run_example.py  tops_to_3067.py
tests/: test_algorithms.py  test_iris_integration.py  test_iris_reader.py  test_nwp.py  test_output.py  test_pipeline.py  test_projection.py  test_tops_reader.py
