[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "radar-hail-probability"
version = "0.1.0"
description = "Hail probability fields (POH/LHI) from IRIS radar composites and NWP data"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "xarray>=2024.1",
    "scipy>=1.12",
    "pyproj>=3.6",
    "wradlib>=2.0",
    "h5py>=3.10",
    "rasterio>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hailathon"]
