[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "radar-hail-probability"
dynamic = ["version"]
description = "Hail probability fields (POH/LHI) from IRIS radar composites and NWP data"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "xarray>=2024.1",
    "scipy>=1.12",
    "pyproj>=3.6",
    "wradlib>=2.0",
    "h5py>=3.10",
    "rasterio>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/hailathon"]

[tool.mypy]
python_version = "3.12"

[[tool.mypy.overrides]]
# Scientific packages that don't ship type stubs
module = ["xarray", "xarray.*", "wradlib", "wradlib.*", "scipy", "scipy.*", "rasterio", "rasterio.*", "h5py", "h5py.*"]
ignore_missing_imports = true
